<resources>
    <string name="app_name">UEN Midline 2020</string>
    <string name="btnSync">Sync</string>
    <string name="btnUpload">Upload</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="tdheading">SECTION D: HOUSEHOLD MEMBER’S INFORMATION</string>
    <string name="teheading">SECTION E: REPRODUCTIVE HEALTH (Complete this table for all married women aged 15-49 years in the household) </string>
    <string name="te2heading">MATERNAL MORTALITY STATUS</string>
    <string name="tfheading">SECTION F: ANTENATAL CARE</string>
    <string name="tiheading">SECTION I: CHILD HEALTH</string>
    <string name="ti2heading">SECTION I2: ACUTE RESPIRATORY INFECTION (ARI)</string>
    <string name="tjheading">SECTION J: IMMUNIZATION</string>
    <string name="tkheading">SECTION K: FAMILY PLANNING</string>
    <string name="tlheading">SECTION L: WOMEN EMPOWERMENT</string>
    <string name="tnheading">SECTION N: WATER AND SANITATION</string>
    <string name="toheading">SECTION O: HANDWASHING</string>
    <string name="splashText">Supporting Women and Girls in Pakistan Scaling Up\n
    Empowerment and Care  Strategies  to Address Health and Survival\n
    Centre of Excellence Women &amp; Child Health\n
    Aga Khan University, Karachi, Pakistan</string>
    <string name="title_activity_family_members_list">Family Members List</string>
    <string name="sM">UC</string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>
    <string name="dkn"> Don\'t Know </string>
    <string name="none"> None or Never </string>
    <string name="na"> Not Applicable/Available  </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Specify </string>
    <string name="year"> Years </string>
    <string name="month"> Months </string>
    <string name="weeks"> Weeks </string>
    <string name="days"> Days </string>
    <string name="hours"> Hours </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> Centimeters </string>
    <string name="in"> Inches </string>
    <string name="rupees"> Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="total">Total</string>
    <string name="mwra">MWRA</string>
    <string name="under5">Child Under 5</string>
    <string name="taheading">SECTION A: HH Identification</string>
    <string name="a101"> a101:/t Date of interview: </string>
    <string name="a101a"> This information will be based on the list of villages generated from the district. Each enumerator will be given a list of clusters that he/she will be visiting, and before starting the interview, this information will be entered from the same list. </string>
    <string name="a102"> a102:/t Time of interview: In 24 hours format</string>
    <string name="a102a"> LHW covered </string>
    <string name="a102b"> LHW uncovered </string>
    <string name="a103"> A103:\t Form Serial Number : Auto generated </string>
    <string name="a104"> Province </string>
    <string name="a104a"> a104a:/t Team Leader’s name</string>
    <string name="a104b"> a104b:/t Team Leader’s Code</string>
    <string name="a104c">Sindh </string>
    <string name="a105"> a105:/t Cluster number</string>
    <string name="a105a">Jafferabad </string>
    <string name="a105a_title">Balochistan</string>
    <string name="a105b">Nasirabad </string>
    <string name="a105c">Lasbella </string>
    <string name="a105d">Muzaffargarh</string>
    <string name="a105d_title">Punjab </string>
    <string name="a105e">Rahimyar Khan </string>
    <string name="a105f">Badin </string>
    <string name="a105f_title">Sindh</string>
    <string name="a105g">Sanghar </string>
    <string name="a105h">Qamber Shahdadkot </string>
    <string name="a106"> a106:/t Enumeration Block</string>
    <string name="a107"> a107:/t PROVINCE</string>
    <string name="a108"> a108:/t District</string>
    <string name="a108a">Urban </string>
    <string name="a108b">Rural </string>
    <string name="a109"> a109:/t Tehsil</string>
    <string name="a110"> a110:/t City </string>
    <string name="a111"> a111:/t Village</string>
    <string name="a112"> a112:/t Household number</string>
    <string name="a112a">Not Available</string>
    <string name="checkHHpresent"> Selected Head name present (A/C Line listing) </string>
    <string name="b101"> b101:/t You or others in your household worried about not having enough food to eat because of a lack of money or other resources?</string>
    <string name="b102"> b102:/t How often did this happen?      </string>
    <string name="c101"> c101:/t Name and line number of the Index Mother:</string>
    <string name="c101a"> C101A:\t Verbal consent</string>
    <string name="c101aa"> c101aa:/t Name</string>
    <string name="c101ab"> c101ab:/t line number</string>
    <string name="c101b"> c101b:/t Name and line number of index child</string>
    <string name="c101ba"> c101ba:/t Name of index child</string>
    <string name="c101bb"> c101bb:/t line number of index child</string>
    <string name="d101"> d101:/t Full sugar carbonated soft drinks (i.e. Pepsi/Coca-Cola)</string>
    <string name="d102"> d102:/t Fruit juice (i.e. lemonade - not real juice)</string>
    <string name="d102a"> d102a:/t At home</string>
    <string name="d103"> d103:/t Black tea (or other caffeine beverages)</string>
    <string name="d103hint"> What is the relationship of [NAME] to the Head of the household ? </string>
    <string name="d103a"> d103a:/t With sugar</string>
    <string name="d103b"> d103b:/t Without sugar</string>
    <string name="d103c"> Son/Daughters </string>
    <string name="d103d"> Son in law/Daughter in law </string>
    <string name="d103e"> Grand child </string>
    <string name="d103f"> Parents </string>
    <string name="d103g"> Parents in law </string>
    <string name="d103h"> Brother/Sister </string>
    <string name="d103i"> Brother in law/Sister in law </string>
    <string name="d103j"> Niece/Nephew </string>
    <string name="d103k"> Grand Parents </string>
    <string name="d103l"> Aunts/Uncle </string>
    <string name="d103m"> Adopted/Step child </string>
    <string name="d103n"> Domestic Servant </string>
    <string name="d103o"> Don’t Know </string>
    <string name="d104"> d104:/t Tea with milk</string>
    <string name="d104a"> d104a:/t With sugar</string>
    <string name="d104b"> d104b:/t Without sugar</string>
    <string name="d105"> d105:/t How much sugar do you use?</string>
    <string name="d105a"> d105a:/t None/less than 1 teaspoon per day </string>
    <string name="d105b"> d105b:/t 1–2 teaspoons per day  </string>
    <string name="d105c"> d105c:/t 3–4 teaspoons per day </string>
    <string name="d105d"> Divorced/Separated </string>
    <string name="d106"> d106:/t Water                             </string>
    <string name="d106a"> d106a:/t Tap</string>
    <string name="d106b"> d106b:/t  Bottled  </string>
    <string name="d107"> D107:\t Serial no. of Mother If mother’s relation is “Not Available” in the members list then record code “NA” </string>
    <string name="d107a"> Serial no. of Mother </string>
    <string name="d107b"> NA </string>
    <string name="d601"> d601:/t Cold cereal           </string>
    <string name="d601a"> d601a:/t More than 1 bowl per day </string>
    <string name="d601b"> d601b:/t One bowl per week </string>
    <string name="d601c"> d601c:/t 2-4 bowls per week </string>
    <string name="d601d"> d601d:/t 5-7 bowls per week </string>
    <string name="d601e"> d601e:/t 1–3 bowls per month </string>
    <string name="d601f"> d601f:/t Never/less than 1 per month </string>
    <string name="d602"> d602:/t Hot cereal (oatmeal or other types of cooked breakfast cereal)      </string>
    <string name="d602a"> d602a:/t More than 1 bowl per day </string>
    <string name="d602b"> d602b:/t One bowl per week </string>
    <string name="d602c"> d602c:/t 2-4 bowls per week </string>
    <string name="d602d"> d602d:/t 5-7 bowls per week </string>
    <string name="d602e"> d602e:/t 1–3 bowls per month </string>
    <string name="d602f"> d602f:/t Never/less than 1 per month </string>
    <string name="d603"> d603:/t White bread (i.e. naan)    </string>
    <string name="d603a"> d603a:/t 2-3 slices per day </string>
    <string name="d603b"> d603b:/t  More than 3 slices per day </string>
    <string name="d603c"> d603c:/t 1 slice per week or less </string>
    <string name="d603d"> d603d:/t 2-4 slices per week </string>
    <string name="d603e"> d603e:/t 5-7 slices per week </string>
    <string name="d603f"> d603f:/t Never/less than 1 per month</string>
    <string name="d604"> d604:/t Wheat bread (i.e. roti/chapati)    </string>
    <string name="d604a"> d604a:/t 2-3 slices per day </string>
    <string name="d604b"> d604b:/t More than 3 slices per day </string>
    <string name="d604c"> d604c:/t 1 slice per week or less </string>
    <string name="d604d"> d604d:/t 2-4 slices per week </string>
    <string name="d604e"> d604e:/t 5-7 slices per week </string>
    <string name="d604f"> d604f:/t Never/less than 1 per month</string>
    <string name="d605"> d605:/t Gram flour bread (chickpea flour bread)      </string>
    <string name="d605a"> d605a:/t 2-3 slices per day </string>
    <string name="d605b"> d605b:/t More than 3 slices per day</string>
    <string name="d605c"> d605c:/t 1 slice per week or less </string>
    <string name="d605d"> d605d:/t 2-4 slices per week </string>
    <string name="d605e"> d605e:/t 5-7 slices per week </string>
    <string name="d605f"> d605f:/t Never/less than 1 per month</string>
    <string name="d606"> d606:/t White rice (1 serving)        </string>
    <string name="d606a"> d606a:/t  Once per week </string>
    <string name="d606b"> d606b:/t 2-4 times per week  </string>
    <string name="d606c"> d606c:/t More than 4 times per week </string>
    <string name="d606d"> d606d:/t 1–3 times per month</string>
    <string name="d606e"> d606e:/t Never/less than 1 per month</string>
    <string name="d607"> d607:/t Other grains (maize, barley)   </string>
    <string name="d607a"> d607a:/t Once per week</string>
    <string name="d607b"> d607b:/t 2-4 times per week  </string>
    <string name="d607c"> d607c:/t More than 4 times per week  </string>
    <string name="d607d"> d607d:/t 1–3 times per month </string>
    <string name="d607e"> d607e:/t Never/less than 1 per month </string>
    <string name="d801"> d801:/t Jam/honey/syrup</string>
    <string name="d801a"> d801a:/t Once per week </string>
    <string name="d801b"> d801b:/t 2-4 times per week  </string>
    <string name="d801c"> d801c:/t More than 4 times per week  </string>
    <string name="d801d"> d801d:/t 1–3 times per month </string>
    <string name="d801e"> d801e:/t Never/less than 1 per month </string>
    <string name="k208"> k208:/t Interview Status </string>
    <string name="k208a"> k208a:/t Completed </string>
    <string name="k208b"> k208b:/t Withdrawn </string>
    <string name="k208c"> k208c:/t Refused</string>
    <string name="end_interview"> End </string>
    <string name="nextSection"> Next </string>
</resources>