<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_scans_bl.ui.sections.SectionD6Activity" />
    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbarSize="10dip"
        android:layoutDirection="ltr"
        tools:context=".ui.sections.SectionD6Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fldGrpSectionD6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- d601  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVd601"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/d601" />

                    <RadioGroup
                        android:id="@+id/d601"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/d601a"
                            style="@style/radiobutton"
                            android:text="@string/d601a" />

                        <RadioButton
                            android:id="@+id/d601b"
                            style="@style/radiobutton"
                            android:text="@string/d601b" />

                        <RadioButton
                            android:id="@+id/d601c"
                            style="@style/radiobutton"
                            android:text="@string/d601c" />

                        <RadioButton
                            android:id="@+id/d601d"
                            style="@style/radiobutton"
                            android:text="@string/d601d" />

                        <RadioButton
                            android:id="@+id/d601e"
                            style="@style/radiobutton"
                            android:text="@string/d601e" />

                        <RadioButton
                            android:id="@+id/d601f"
                            style="@style/radiobutton"
                            android:text="@string/d601f" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- d602  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVd602"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/d602" />

                    <RadioGroup
                        android:id="@+id/d602"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/d602a"
                            style="@style/radiobutton"
                            android:text="@string/d602a" />

                        <RadioButton
                            android:id="@+id/d602b"
                            style="@style/radiobutton"
                            android:text="@string/d602b" />

                        <RadioButton
                            android:id="@+id/d602c"
                            style="@style/radiobutton"
                            android:text="@string/d602c" />

                        <RadioButton
                            android:id="@+id/d602d"
                            style="@style/radiobutton"
                            android:text="@string/d602d" />

                        <RadioButton
                            android:id="@+id/d602e"
                            style="@style/radiobutton"
                            android:text="@string/d602e" />

                        <RadioButton
                            android:id="@+id/d602f"
                            style="@style/radiobutton"
                            android:text="@string/d602f" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- d603  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVd603"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/d603" />

                    <RadioGroup
                        android:id="@+id/d603"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/d603a"
                            style="@style/radiobutton"
                            android:text="@string/d603a" />

                        <RadioButton
                            android:id="@+id/d603b"
                            style="@style/radiobutton"
                            android:text="@string/d603b" />

                        <RadioButton
                            android:id="@+id/d603c"
                            style="@style/radiobutton"
                            android:text="@string/d603c" />

                        <RadioButton
                            android:id="@+id/d603d"
                            style="@style/radiobutton"
                            android:text="@string/d603d" />

                        <RadioButton
                            android:id="@+id/d603e"
                            style="@style/radiobutton"
                            android:text="@string/d603e" />

                        <RadioButton
                            android:id="@+id/d603f"
                            style="@style/radiobutton"
                            android:text="@string/d603f" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- d604  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVd604"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/d604" />

                    <RadioGroup
                        android:id="@+id/d604"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/d604a"
                            style="@style/radiobutton"
                            android:text="@string/d604a" />

                        <RadioButton
                            android:id="@+id/d604b"
                            style="@style/radiobutton"
                            android:text="@string/d604b" />

                        <RadioButton
                            android:id="@+id/d604c"
                            style="@style/radiobutton"
                            android:text="@string/d604c" />

                        <RadioButton
                            android:id="@+id/d604d"
                            style="@style/radiobutton"
                            android:text="@string/d604d" />

                        <RadioButton
                            android:id="@+id/d604e"
                            style="@style/radiobutton"
                            android:text="@string/d604e" />

                        <RadioButton
                            android:id="@+id/d604f"
                            style="@style/radiobutton"
                            android:text="@string/d604f" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- d605  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVd605"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/d605" />

                    <RadioGroup
                        android:id="@+id/d605"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/d605a"
                            style="@style/radiobutton"
                            android:text="@string/d605a" />

                        <RadioButton
                            android:id="@+id/d605b"
                            style="@style/radiobutton"
                            android:text="@string/d605b" />

                        <RadioButton
                            android:id="@+id/d605c"
                            style="@style/radiobutton"
                            android:text="@string/d605c" />

                        <RadioButton
                            android:id="@+id/d605d"
                            style="@style/radiobutton"
                            android:text="@string/d605d" />

                        <RadioButton
                            android:id="@+id/d605e"
                            style="@style/radiobutton"
                            android:text="@string/d605e" />

                        <RadioButton
                            android:id="@+id/d605f"
                            style="@style/radiobutton"
                            android:text="@string/d605f" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- d606  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVd606"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/d606" />

                    <RadioGroup
                        android:id="@+id/d606"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/d606a"
                            style="@style/radiobutton"
                            android:text="@string/d606a" />

                        <RadioButton
                            android:id="@+id/d606b"
                            style="@style/radiobutton"
                            android:text="@string/d606b" />

                        <RadioButton
                            android:id="@+id/d606c"
                            style="@style/radiobutton"
                            android:text="@string/d606c" />

                        <RadioButton
                            android:id="@+id/d606d"
                            style="@style/radiobutton"
                            android:text="@string/d606d" />

                        <RadioButton
                            android:id="@+id/d606e"
                            style="@style/radiobutton"
                            android:text="@string/d606e" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- d607  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVd607"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/d607" />

                    <RadioGroup
                        android:id="@+id/d607"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/d607a"
                            style="@style/radiobutton"
                            android:text="@string/d607a" />

                        <RadioButton
                            android:id="@+id/d607b"
                            style="@style/radiobutton"
                            android:text="@string/d607b" />

                        <RadioButton
                            android:id="@+id/d607c"
                            style="@style/radiobutton"
                            android:text="@string/d607c" />

                        <RadioButton
                            android:id="@+id/d607d"
                            style="@style/radiobutton"
                            android:text="@string/d607d" />

                        <RadioButton
                            android:id="@+id/d607e"
                            style="@style/radiobutton"
                            android:text="@string/d607e" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnd"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_orange_light"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_blue_dark"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>