<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.aku.hassannaqvi.wfp_recruit_form.ui.AnthroEndingActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_scans_bl.ui.other.AnthroEndingActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="horizontal">

        <LinearLayout
            android:id="@+id/anthroEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <!-- k208  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVk208"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/k208" />

                    <RadioGroup
                        android:id="@+id/k208"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/k208a"
                            style="@style/radiobutton"
                            android:text="@string/k208a" />

                        <RadioButton
                            android:id="@+id/k208b"
                            style="@style/radiobutton"
                            android:text="@string/k208b" />

                        <RadioButton
                            android:id="@+id/k208c"
                            style="@style/radiobutton"
                            android:text="@string/k208c" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_green_light"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>