<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_scans_bl.ui.sections.SectionD8Activity" />
    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbarSize="10dip"
        android:layoutDirection="ltr"
        tools:context=".ui.sections.SectionD8Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- d801  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVd801"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/d801" />

                    <RadioGroup
                        android:id="@+id/d801"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/d801a"
                            style="@style/radiobutton"
                            android:text="@string/d801a" />

                        <RadioButton
                            android:id="@+id/d801b"
                            style="@style/radiobutton"
                            android:text="@string/d801b" />

                        <RadioButton
                            android:id="@+id/d801c"
                            style="@style/radiobutton"
                            android:text="@string/d801c" />

                        <RadioButton
                            android:id="@+id/d801d"
                            style="@style/radiobutton"
                            android:text="@string/d801d" />

                        <RadioButton
                            android:id="@+id/d801e"
                            style="@style/radiobutton"
                            android:text="@string/d801e" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    style="@style/button"
                    android:layout_marginRight="10dp"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/button"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save" />
                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>